src/component/BottomNavigationBar/BottomNavigationBar.css
.bottom-nav-wrapper-- {
  position: absolute;
  width: 100%;
}

.bottom-nav-- {
  background: linear-gradient(
    135deg,
    rgba(255, 255, 255, 0.2) 0%,
    rgba(255, 255, 255, 0.1) 100%
  );
  backdrop-filter: blur(15px);
  -webkit-backdrop-filter: blur(15px);

  gap: 12px;
  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.15);
  border: 1px solid rgba(0, 0, 0, 0.1);
  pointer-events: none;
  z-index: 10;
}

.bottom-nav--.dark-theme {
  box-shadow: none;
  background: rgba(0, 0, 0, 0.1);
  color: #ffffff;
  border: 1px solid #777777;
}

.bottom-nav--::before {
  position: absolute;
}

.navbar-settings.dark-theme,
.route.dark-theme {
  box-shadow: none;
  background: rgba(0, 0, 0, 0.1);
  color: #ffffff;
  z-index: 10;
}

.route,
.navbar-settings {
  background: linear-gradient(
    135deg,
    rgba(255, 255, 255, 0.2) 0%,
    rgba(255, 255, 255, 0.1) 100%
  );
  padding: 4px 16px;
  backdrop-filter: blur(15px);
  -webkit-backdrop-filter: blur(15px);
  display: flex;
  justify-content: center;
  align-items: center;
  gap: 12px;
  z-index: 10;
}

.bottom-nav-- ul {
  padding: 0;
}

.bottom-nav-- li {
  width: 40px;
  height: 40px;
  transition: all 0.3s ease-in-out;
}
.bottom-nav-- li div {
  overflow: hidden;
  transition: all 0.3s ease-in-out;
  width: 40px;
  height: 40px;
  border-radius: 50%;
  display: flex;
  justify-content: center;
  align-items: center;
}

.active_hover.dark-theme li:hover div {
  transition: all 0.3s ease-in-out;
  transform: translateY(-20px) scale(1.2);
  background-color: rgba(255, 255, 255, 0.2);
  box-shadow: 0 8px 20px rgba(255, 255, 255, 0.1);
  border: 1px solid rgba(255, 255, 255, 0.4);
}

.active_hover li:hover div {
  transition: all 0.3s ease-in-out;
  transform: translateY(-20px) scale(1.2);
  background-color: rgba(255, 255, 255, 0.8);
  box-shadow: 0 8px 20px rgba(0, 0, 0, 0.3);
}

.bottom-nav--.align_left.active_hover.dark-theme li:hover div,
.bottom-nav--.align_right.active_hover.dark-theme li:hover div {
  transition: all 0.3s ease-in-out;
  transform: initial;
  background-color: rgba(255, 255, 255, 0.2);
  box-shadow: 0 8px 20px rgba(255, 255, 255, 0.1);
  border: 1px solid rgba(255, 255, 255, 0.4);
}
.bottom-nav--.align_left.active_hover li:hover div,
.bottom-nav--.align_right.active_hover li:hover div {
  transition: all 0.3s ease-in-out;
  transform: initial;
  background-color: rgba(255, 255, 255, 0.8);
  box-shadow: 0 8px 20px rgba(0, 0, 0, 0.3);
}

.active_route,
.active_route_align_left,
.active_route_align_right {
  position: relative;
}

.active_route::before,
.active_route_align_left::before,
.active_route_align_right::before {
  position: absolute;
  content: "";
  width: 8px;
  height: 8px;
  border-radius: 50%;
  transform: translate(-50%);
  background: linear-gradient(
    45deg,
    rgb(255, 0, 0),
    rgb(255, 165, 0),
    rgb(255, 255, 0),
    rgb(0, 255, 0),
    rgb(0, 0, 255),
    rgb(75, 0, 130),
    rgb(238, 130, 238)
  );
}

.active_route_align_left::before,
.active_route_align_right::before {
  top: 50%;
  transform: translateY(-50%);
}

.active_route::before {
  left: 50%;
  bottom: -8px;
}

.active_route_align_left::before {
  left: -4px;
}
.active_route_align_right::before {
  right: -4px;
}

